# qa_guru_hw16

hw_16_poetry/: pyproject.toml
